--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,85 @@
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
+
+h1 {
+    background-color: black;
+    color:  rgb(255, 255, 255);
+    padding: 20px;
+    font-size: 18px;
+}
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+body{
+   background-color: #f3f5f9;
+}
+
+.wrapper{
+  display: flex;
+  position: fixed;
+}
+
+.wrapper .sidebar{
+  width: 200px;
+  height: 100%;
+  background-color: white;
+  padding: 30px 0px;
+  position: fixed;
+}
+
+.wrapper .sidebar ul li{
+  padding: 15px;
+  border-bottom: 1px solid #bdb8d7;
+  border-bottom: 1px solid rgba(0,0,0,0.05);
+  border-top: 1px solid rgba(255,255,255,0.05);
+}    
+
+.wrapper .sidebar ul li a{
+  color: #080808;
+  display: block;
+}
+
+.wrapper .sidebar ul li a .fas{
+  width: 25px;
+}
+
+.wrapper .sidebar ul li:hover{
+  background-color: #e7e7ea;
+}
+ 
+.wrapper .main_content{
+  width: 100%;
+  margin-left: 200px;
+  color: #cd1c1c;
+}
+
+.wrapper .main_content .header{
+  padding: 20px;
+  background: #fff;
+  color: #000000;
+  font-size: 38px;
+  border-bottom: 1px solid #e0e4e8;
+}
+
+.btn {
+    background-color: rgb(3, 54, 105);
+    border: none;
+    color: white;
+    padding: 16px 16px;
+    font-size: 16px;
+    cursor: pointer; 
+    float: right;
+  }
+  
+  /* Darker background on mouse-over */
+  .btn:hover {
+    background-color: RoyalBlue;
+  }
 body {
     margin: 0;
     font-size: 16px;
@@ -7,6 +89,7 @@ body {
 
 .container {
     width: 100%; 
+    flex: fixed;
 }
 
 h1 {
@@ -48,8 +131,6 @@ h1 {
 .user-login {
     align-items: center;
     justify-content: center;
-    
-    margin: auto ;
     display: flex;
     height: 200px;
     width: 100%;
